--- a/BEM/tab.css
+++ b/BEM/tab.css
@@ -13,6 +13,7 @@
   border-radius: 3px;
   border: 0;
   background-color: #333;
+  padding: 10px;
   color: #fff;
   font-size: 12px;
   cursor: pointer;
@@ -36,5 +37,5 @@
 }
 
 .button--danger {
-  background-color: green;
+  background-color: red;
 }
